--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ __pypackages__/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
+celery.pid
 
 # SageMath parsed files
 *.sage.py
@@ -130,5 +131,4 @@ dmypy.json
 settings_local.py
 settings_local.dev.py
 .idea/
-run/
 static_content/
